--- a/index.html
+++ b/index.html
@@ -87,21 +87,36 @@
 
 <div id="momentos" class="gallery">
   <h2>💖 Nuestros Momentos 💖</h2>
-  <img src="tufoto1.jpg" alt="Momento 1">
-  <img src="tufoto2.jpg" alt="Momento 2">
+  <img src="tufoto1.jpeg" alt="Momento 1">
+  <img src="tufoto2.jpeg" alt="Momento 2">
+  <img src="tufoto3.jpeg" alt="Momento 3">
+  <img src="tufoto4.jpeg" alt="Momento 4">
+  <img src="tufoto5.jpeg" alt="Momento 5">
+  <img src="tufoto6.jpeg" alt="Momento 6">
+  <img src="tufoto7.jpeg" alt="Momento 7">
+  <img src="tufoto8.jpeg" alt="Momento 8">
+  <img src="tufoto9.jpeg" alt="Momento 9">
+  <img src="tufoto10.jpeg" alt="Momento 10">
+  <img src="tufoto11.jpeg" alt="Momento 11">
+  <img src="tufoto12.jpeg" alt="Momento 12">
+  <img src="tufoto13.jpeg" alt="Momento 13">
+  <img src="tufoto14.jpeg" alt="Momento 14">
+  <img src="tufoto15.jpeg" alt="Momento 15">
+  <img src="tufoto16.jpeg" alt="Momento 16">
+  <img src="tufoto17.jpeg" alt="Momento 16">
   <!-- Agregá más imágenes -->
 </div>
 
 <div id="cena" class="gallery">
   <h2>🍽️ Tu Cena 🍽️</h2>
-  <img src="lugar1.jpg" alt="Lugar 1">
-  <img src="lugar2.jpg" alt="Lugar 2">
+  <img src="lugar1.jpeg" alt="Lugar 1">
+  <img src="lugar2.jpeg" alt="Lugar 2">
 </div>
 
 <div id="regalo" class="gallery">
   <h2>🎁 Tu Regalo 🎁</h2>
-  <img src="regalo1.jpg" alt="Regalo 1">
-  <img src="regalo2.jpg" alt="Regalo 2">
+  <img src="regalo1.jpeg" alt="Regalo 1">
+  <img src="regalo2.jpeg" alt="Regalo 2">
   <div class="final-message">
     <p>
       “Te amo con un amor que viene de Dios. Porque Él es quien nos unió, 
