--- a/index.html
+++ b/index.html
@@ -87,23 +87,23 @@
 
 <div id="momentos" class="gallery">
   <h2>💖 Nuestros Momentos 💖</h2>
-  <img src="tufoto1.jpeg" alt="Momento 1">
-  <img src="tufoto2.jpeg" alt="Momento 2">
-  <img src="tufoto3.jpeg" alt="Momento 3">
-  <img src="tufoto4.jpeg" alt="Momento 4">
-  <img src="tufoto5.jpeg" alt="Momento 5">
-  <img src="tufoto6.jpeg" alt="Momento 6">
-  <img src="tufoto7.jpeg" alt="Momento 7">
-  <img src="tufoto8.jpeg" alt="Momento 8">
-  <img src="tufoto9.jpeg" alt="Momento 9">
-  <img src="tufoto10.jpeg" alt="Momento 10">
-  <img src="tufoto11.jpeg" alt="Momento 11">
-  <img src="tufoto12.jpeg" alt="Momento 12">
-  <img src="tufoto13.jpeg" alt="Momento 13">
-  <img src="tufoto14.jpeg" alt="Momento 14">
-  <img src="tufoto15.jpeg" alt="Momento 15">
-  <img src="tufoto16.jpeg" alt="Momento 16">
-  <img src="tufoto17.jpeg" alt="Momento 16">
+  <img src="img/tufoto1.jpeg" alt="Momento 1">
+  <img src="img/tufoto2.jpeg" alt="Momento 2">
+  <img src="img/tufoto3.jpeg" alt="Momento 3">
+  <img src="img/tufoto4.jpeg" alt="Momento 4">
+  <img src="img/tufoto5.jpeg" alt="Momento 5">
+  <img src="img/tufoto6.jpeg" alt="Momento 6">
+  <img src="img/tufoto7.jpeg" alt="Momento 7">
+  <img src="img/tufoto8.jpeg" alt="Momento 8">
+  <img src="img/tufoto9.jpeg" alt="Momento 9">
+  <img src="img/tufoto10.jpeg" alt="Momento 10">
+  <img src="img/tufoto11.jpeg" alt="Momento 11">
+  <img src="img/tufoto12.jpeg" alt="Momento 12">
+  <img src="img/tufoto13.jpeg" alt="Momento 13">
+  <img src="img/tufoto14.jpeg" alt="Momento 14">
+  <img src="img/tufoto15.jpeg" alt="Momento 15">
+  <img src="img/tufoto16.jpeg" alt="Momento 16">
+  <img src="img/tufoto17.jpeg" alt="Momento 16">
   <!-- Agregá más imágenes -->
 </div>
 
