--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
 
     .gallery img {
       width: 200px;
-      height: auto;
-      margin: 10px;
+      height: 200px;
+      object-fit: cover;
       border-radius: 15px;
-      box-shadow: 0 0 10px rgba(255,255,255,0.5);
+      margin: 10px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
     }
+
 
     .final-message {
       margin-top: 50px;
