--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Feliz Cumple Sofía</title>
   <style>
+    .hidden {
+      display: none;
+    }
+
     body {
       background: linear-gradient(to bottom, #2c003e, #1a1a1a);
       color: #fff;
@@ -115,13 +119,13 @@
   <!-- Agregá más imágenes -->
 </div>
 
-<div id="cena" class="gallery">
+<div id="cena" class="gallery hidden">
   <h2>🍽️ Tu Cena 🍽️</h2>
   <img src="lugar1.jpeg" alt="Lugar 1">
   <img src="lugar2.jpeg" alt="Lugar 2">
 </div>
 
-<div id="regalo" class="gallery">
+<div id="regalo" class="gallery hidden">
   <h2>🎁 Tu Regalo 🎁</h2>
   <img src="regalo1.jpeg" alt="Regalo 1">
   <img src="regalo2.jpeg" alt="Regalo 2">
