--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
   <meta charset="UTF-8">
   <title>Feliz Cumple Sofía</title>
   <style>
-    .hidden {
-      display: none;
-    }
-
     body {
       background: linear-gradient(to bottom, #2c003e, #1a1a1a);
       color: #fff;
@@ -46,15 +42,9 @@
     }
 
     .gallery {
-  display: none;
-  margin-top: 30px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  justify-items: center;
-  gap: 15px;
-  padding: 0 20px;
-}
-
+      display: none;
+      margin-top: 30px;
+    }
 
     .gallery img {
       width: 200px;
@@ -99,33 +89,33 @@
 
 <div id="momentos" class="gallery">
   <h2>💖 Nuestros Momentos 💖</h2>
-  <img src="img/tufoto16.jpeg" alt="Momento 16">
-   <img src="img/tufoto9.jpeg" alt="Momento 9">
+  <img src="img/tufoto1.jpeg" alt="Momento 1">
+  <img src="img/tufoto2.jpeg" alt="Momento 2">
   <img src="img/tufoto3.jpeg" alt="Momento 3">
   <img src="img/tufoto4.jpeg" alt="Momento 4">
   <img src="img/tufoto5.jpeg" alt="Momento 5">
   <img src="img/tufoto6.jpeg" alt="Momento 6">
   <img src="img/tufoto7.jpeg" alt="Momento 7">
   <img src="img/tufoto8.jpeg" alt="Momento 8">
-  <img src="img/tufoto2.jpeg" alt="Momento 2">
+  <img src="img/tufoto9.jpeg" alt="Momento 9">
   <img src="img/tufoto10.jpeg" alt="Momento 10">
   <img src="img/tufoto11.jpeg" alt="Momento 11">
   <img src="img/tufoto12.jpeg" alt="Momento 12">
   <img src="img/tufoto13.jpeg" alt="Momento 13">
   <img src="img/tufoto14.jpeg" alt="Momento 14">
   <img src="img/tufoto15.jpeg" alt="Momento 15">
-  <img src="img/tufoto1.jpeg" alt="Momento 1">
-  <img src="img/tufoto17.jpeg" alt="Momento 17">
+  <img src="img/tufoto16.jpeg" alt="Momento 16">
+  <img src="img/tufoto17.jpeg" alt="Momento 16">
   <!-- Agregá más imágenes -->
 </div>
 
-<div id="cena" class="gallery hidden">
+<div id="cena" class="gallery">
   <h2>🍽️ Tu Cena 🍽️</h2>
   <img src="lugar1.jpeg" alt="Lugar 1">
   <img src="lugar2.jpeg" alt="Lugar 2">
 </div>
 
-<div id="regalo" class="gallery hidden">
+<div id="regalo" class="gallery">
   <h2>🎁 Tu Regalo 🎁</h2>
   <img src="regalo1.jpeg" alt="Regalo 1">
   <img src="regalo2.jpeg" alt="Regalo 2">
