--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
 
     .gallery img {
       width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 15px;
+      height: auto;
       margin: 10px;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(255,255,255,0.5);
     }
-
 
     .final-message {
       margin-top: 50px;
