--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       padding: 0;
       overflow-x: hidden;
     }
+    
+    .tamaño-fijo {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+}
 
     h1 {
       margin-top: 30px;
@@ -87,23 +94,23 @@
 
 <div id="momentos" class="gallery">
   <h2>💖 Nuestros Momentos 💖</h2>
-  <img src="img/tufoto16.jpeg" alt="Momento 1">
-  <img src="img/tufoto9.jpeg" alt="Momento 2">
-  <img src="img/tufoto3.jpeg" alt="Momento 3">
-  <img src="img/tufoto4.jpeg" alt="Momento 4">
-  <img src="img/tufoto5.jpeg" alt="Momento 5">
-  <img src="img/tufoto6.jpeg" alt="Momento 6">
-  <img src="img/tufoto7.jpeg" alt="Momento 7">
-  <img src="img/tufoto8.jpeg" alt="Momento 8">
-  <img src="img/tufoto2.jpeg" alt="Momento 9">
-  <img src="img/tufoto10.jpeg" alt="Momento 10">
-  <img src="img/tufoto11.jpeg" alt="Momento 11">
-  <img src="img/tufoto12.jpeg" alt="Momento 12">
-  <img src="img/tufoto13.jpeg" alt="Momento 13">
-  <img src="img/tufoto14.jpeg" alt="Momento 14">
-  <img src="img/tufoto15.jpeg" alt="Momento 15">
-  <img src="img/tufoto1.jpeg" alt="Momento 16">
-  <img src="img/tufoto17.jpeg" alt="Momento 16">
+  <img src="img/tufoto16.jpeg" alt="Momento 1" class="tamaño-fijo">
+  <img src="img/tufoto9.jpeg" alt="Momento 2" class="tamaño-fijo">
+  <img src="img/tufoto3.jpeg" alt="Momento 3"class="tamaño-fijo" >
+  <img src="img/tufoto4.jpeg" alt="Momento 4" class="tamaño-fijo">
+  <img src="img/tufoto5.jpeg" alt="Momento 5" class="tamaño-fijo">
+  <img src="img/tufoto6.jpeg" alt="Momento 6" class="tamaño-fijo">
+  <img src="img/tufoto7.jpeg" alt="Momento 7" class="tamaño-fijo">
+  <img src="img/tufoto8.jpeg" alt="Momento 8" class="tamaño-fijo">
+  <img src="img/tufoto2.jpeg" alt="Momento 9" class="tamaño-fijo">
+  <img src="img/tufoto10.jpeg" alt="Momento 10" class="tamaño-fijo">
+  <img src="img/tufoto11.jpeg" alt="Momento 11" class="tamaño-fijo">
+  <img src="img/tufoto12.jpeg" alt="Momento 12" class="tamaño-fijo">
+  <img src="img/tufoto13.jpeg" alt="Momento 13" class="tamaño-fijo">
+  <img src="img/tufoto14.jpeg" alt="Momento 14" class="tamaño-fijo">
+  <img src="img/tufoto15.jpeg" alt="Momento 15" class="tamaño-fijo">
+  <img src="img/tufoto1.jpeg" alt="Momento 16" class="tamaño-fijo">
+  <img src="img/tufoto17.jpeg" alt="Momento 16" class="tamaño-fijo">
   <!-- Agregá más imágenes -->
 </div>
 
