imagenes index.html

--- a/index.html
+++ b/index.html
@@ -109,14 +109,34 @@
 
 <div id="cena" class="gallery">
   <h2>🍽️ Tu Cena 🍽️</h2>
-  <img src="lugar1.jpeg" alt="Lugar 1">
-  <img src="lugar2.jpeg" alt="Lugar 2">
+
+  <!-- Opción 1: Negroni -->
+  <div class="opcion-cena" id="paulista">
+    <h3>Negroni Restaurant</h3>
+    <div class="imagenes">
+      <img src="Negroni1.jpeg" alt="Negroni 1">
+      <img src="Negroni2.jpeg" alt="Negroni 2">
+    </div>
+    <p>Negroni ofrece un ambiente moderno con tragos exclusivos y platos gourmet. Perfecto para una noche elegante y diferente.(conocido)</p>
+  </div>
+
+  <!-- Opción 2: Pyhare Pizza -->
+  <div class="opcion-cena" id="pyhare">
+    <h3>Pyhare Pizza</h3>
+    <div class="imagenes">
+      <img src="pyhare1.jpeg" alt="Pyhare Pizza 1">
+      <img src="pyhare2.jpeg" alt="Pyhare Pizza 2">
+    </div>
+    <p>Pizzas artesanales, masa crocante y sabores únicos. Un rincón cálido y moderno para compartir momentos deliciosos. (sin conocer)</p>
+  </div>
 </div>
+
 
 <div id="regalo" class="gallery">
   <h2>🎁 Tu Regalo 🎁</h2>
-  <img src="regalo1.jpeg" alt="Regalo 1">
-  <img src="regalo2.jpeg" alt="Regalo 2">
+  <img src="ropa1.jpeg" alt="Regalo 1">
+  <img src="ropa2.jpeg" alt="Regalo 2">
+  <img src="ropa3.jpeg" alt="Regalo 2">
   <div class="final-message">
     <p>
       “Te amo con un amor que viene de Dios. Porque Él es quien nos unió, 
