--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   <div class="opcion-cena" id="paulista">
     <h3>Negroni Restaurant</h3>
     <div class="imagenes">
-      <img src="Negroni1.jpeg" alt="Negroni 1">
-      <img src="Negroni2.jpeg" alt="Negroni 2">
+      <img src="img/Negroni1.jpeg" alt="Negroni 1">
+      <img src="img/Negroni2.jpeg" alt="Negroni 2">
     </div>
     <p>Negroni ofrece un ambiente moderno con tragos exclusivos y platos gourmet. Perfecto para una noche elegante y diferente.(conocido)</p>
   </div>
@@ -124,8 +124,8 @@
   <div class="opcion-cena" id="pyhare">
     <h3>Pyhare Pizza</h3>
     <div class="imagenes">
-      <img src="pyhare1.jpeg" alt="Pyhare Pizza 1">
-      <img src="pyhare2.jpeg" alt="Pyhare Pizza 2">
+      <img src="img/pyhare1.jpeg" alt="Pyhare Pizza 1">
+      <img src="img/pyhare2.jpeg" alt="Pyhare Pizza 2">
     </div>
     <p>Pizzas artesanales, masa crocante y sabores únicos. Un rincón cálido y moderno para compartir momentos deliciosos. (sin conocer)</p>
   </div>
