--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <div class="opcion-cena" id="pyhare">
     <h3>Pyhare Pizza</h3>
     <div class="imagenes">
-      <img src="img/pyhare1.jpeg" alt="Pyhare Pizza 1">
+      <img src="img/Pyhare1.jpeg" alt="Pyhare Pizza 1">
       <img src="img/pyhare2.jpeg" alt="Pyhare Pizza 2">
     </div>
     <p>Pizzas artesanales, masa crocante y sabores únicos. Un rincón cálido y moderno para compartir momentos deliciosos. (sin conocer)</p>
@@ -134,9 +134,9 @@
 
 <div id="regalo" class="gallery">
   <h2>🎁 Tu Regalo 🎁</h2>
-  <img src="ropa1.jpeg" alt="Regalo 1">
-  <img src="ropa2.jpeg" alt="Regalo 2">
-  <img src="ropa3.jpeg" alt="Regalo 2">
+  <img src="img/ropa1.jpeg" alt="Regalo 1">
+  <img src="img/ropa2.jpeg" alt="Regalo 2">
+  <img src="img/ropa3.jpeg" alt="Regalo 2">
   <div class="final-message">
     <p>
       “Te amo con un amor que viene de Dios. Porque Él es quien nos unió, 
