--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </div>
 
 <div id="cena" class="gallery">
-  <h2>🍽️ Tu Cena 🍽️</h2>
+  <h2>🍽️ Opciones Para Tu Cena 🍽️</h2>
 
   <!-- Opción 1: Negroni -->
   <div class="opcion-cena" id="paulista">
